--- a/hola.html
+++ b/hola.html
@@ -5,8 +5,8 @@
     </head>
 
     <body>
-        Hello, world!
-        <h1>Hello</h1>
+        <h1>Hello, world!</h1>
+        <h2>Hello</h2>
             
     </body>
 </html>
